[package]
name = "sekshibot"
version = "0.1.0"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
async-channel = "1.1.1"
async-mutex = "1.1.5"
async-std = { version = "1.6.2" }
async-trait = "0.1.36"
async-tungstenite = { version = "0.8.0", features = ["async-std-runtime", "async-tls"] }
base64 = "0.13.0"
chrono = { version = "0.4.13", features = ["serde"] }
chrono-humanize = "0.1.1"
femme = "2.1.0"
futures = "0.3.5"
gumdrop = "0.8.0"
hreq = { version = "0.7.0", features = ["async-std", "gzip", "tls"], default-features = false }
html-index = { version = "0.3.3", default-features = false }
log = "0.4.8"
nom = { version = "6.0.0", features = ["std"], default-features = false }
quit = "1.1.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
sha1 = "0.6.0"
shorten-url = "1.0.0"
signal-hook = "0.1.16"
sled = "0.34.0"
tachyons = "0.1.1"
thiserror = "1.0.20"
yolofd = { git = "https://github.com/goto-bus-stop/yolofd.git", branch = "default" }

[profile.release]
lto = true
