[package]
name = "sekshibot"
version = "0.1.0"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
base64 = "0.13.0"
chrono = { version = "0.4.13", features = ["serde"] }
chrono-humanize = "0.2.1"
femme = "2.1.0"
flume = "0.10.12"
gumdrop = "0.8.0"
html-escape = "0.2.7"
html-index = { version = "0.3.3", default-features = false }
lazy_static = "1.4.0"
log = "0.4.8"
minify-html = "0.10.0"
native-tls = "0.2.10"
nom = { version = "7.0.0", features = ["std"], default-features = false }
quit = "1.1.0"
r2d2 = "0.8.9"
r2d2_sqlite = "0.21.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
rusqlite_migration = "1.0.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
sha1_smol = "1.0.0"
shorten-url = "1.0.0"
signal-hook = "0.3.13"
thiserror = "1.0.20"
tungstenite = { version = "0.17.2", features = ["native-tls"] }
ureq = { version = "2.4.0", features = ["json"] }
url = "2.2.2"
yolofd = { git = "https://github.com/goto-bus-stop/yolofd.git", branch = "default" }

[profile.release]
lto = true
